--- a/views/webchat.ejs
+++ b/views/webchat.ejs
@@ -9,6 +9,6 @@
 <body>
     <h1>Olá</h1>
     <script src="/socket.io/socket.io.js"></script>
-    <script>const socket = io()</script>
+    <script src="./js/webchat.js"></script>
 </body>
 </html>
