--- a/views/webchat.ejs
+++ b/views/webchat.ejs
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Olá</h1>
+    <form>
+        <input type="text" id="textInput">
+        <button>Enviar</button>
+        <!-- since there is a button inside the form tag, that is enough to trigger the form event listener. If the button is outside the form tag, clicking on it won't trigger the 'submit' event listener  -->
+    </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/webchat.js"></script>
 </body>
