--- a/views/webchat.ejs
+++ b/views/webchat.ejs
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h2 id="welcome-message">Olá, Seja bem-vindo ao chat!</h2>
+    <h3>Você pode alterá-lo no campo abaixo.</h3>
     <form id="nickname-form">
         <input placeholder="Insira seu nickname" id="nickname-input">
         <button>Salvar</button>
