persistent nickname change backend and frontend

--- a/views/webchat.ejs
+++ b/views/webchat.ejs
@@ -10,7 +10,7 @@
     <h2 id="welcome-message">Olá, Seja bem-vindo ao chat!</h2>
     <h3>Você pode alterá-lo no campo abaixo.</h3>
     <form id="nickname-form">
-        <input placeholder="Insira seu nickname" id="nickname-input">
+        <input placeholder="Novo nickname" id="nickname-input">
         <button>Salvar</button>
     </form>
     <ul></ul>
