--- a/views/webchat.ejs
+++ b/views/webchat.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2 id="welcome-message">Olá, Seja bem-vindo ao chat!</h2>
-    <h3>Você pode alterá-lo no campo abaixo.</h3>
+    <h3>Você pode alterá-lo no campo abaixo</h3>
     <form id="nickname-form">
         <input placeholder="Novo nickname" id="nickname-input">
         <button>Salvar</button>
