--- a/views/webchat.ejs
+++ b/views/webchat.ejs
@@ -10,13 +10,14 @@
     <h2 id="welcome-message">Olá, Seja bem-vindo ao chat!</h2>
     <h3>Você pode alterá-lo no campo abaixo</h3>
     <form id="nickname-form">
-        <input placeholder="Novo nickname" id="nickname-input">
-        <button>Salvar</button>
+        <input placeholder="Novo nickname" id="nickname-input" data-testid="nickname-box">
+        <button data-testid="nickname-button">Salvar</button>
     </form>
     <ul></ul>
     <form id="message-form">
-        <input type="text" placeholder="Olá, pessoal!" id="message-input">
-        <button>Enviar</button>
+        <input type="text" placeholder="Olá, pessoal!" id="message-input"
+        data-testid="message-box">
+        <button data-testid="send-button">Enviar</button>
         <!-- since there is a button inside the form tag, that is enough to trigger the form event listener. If the button is outside the form tag, clicking on it won't trigger the 'submit' event listener  -->
     </form>
     <script src="/socket.io/socket.io.js"></script>
