req4 first part

--- a/views/webchat.ejs
+++ b/views/webchat.ejs
@@ -13,6 +13,7 @@
         <input placeholder="Novo nickname" id="nickname-input" data-testid="nickname-box">
         <button data-testid="nickname-button">Salvar</button>
     </form>
+    <ul id="users-online">Usuários conectados</ul>
     <ul>
         <% messages.forEach((message) => { %>
             <li data-testid='message'><%= message %></li>
