fix bug with ul ambiguity

--- a/views/webchat.ejs
+++ b/views/webchat.ejs
@@ -14,7 +14,7 @@
         <button data-testid="nickname-button">Salvar</button>
     </form>
     <ul id="users-online">Usuários conectados</ul>
-    <ul>
+    <ul id="messages-list">
         <% messages.forEach((message) => { %>
             <li data-testid='message'><%= message %></li>
             <%}) %>
