--- a/views/webchat.ejs
+++ b/views/webchat.ejs
@@ -13,11 +13,7 @@
         <input placeholder="Novo nickname" id="nickname-input" data-testid="nickname-box">
         <button data-testid="nickname-button">Salvar</button>
     </form>
-    <ul id="users-online">Usuários conectados
-        <% onlineUsers.forEach((user) => { %>
-            <li><%= user.databaseNickname %></li>
-       <% }) %>
-    </ul>
+    <ul id="users-online">Usuários conectados</ul>
     <ul id="messages-list">
         <% messages.forEach((message) => { %>
             <li data-testid='message'><%= message %></li>
